[package]
name = "actor-core"
description = "wasmCloud Core Actor Interface"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-core"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
serde = { version = "1.0.123" , features = ["derive"] }
serde_json = "1.0.62"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
log = { version="0.4.14", features =["std","serde"]}
lazy_static = "1.4.0"
