[package]
name = "wasmcloud-actor-blobstore"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"
description = "Interface to the blobstore contract for use by wasmCloud Actors"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-blobstore"
readme = "README.md"
keywords = ["wasm", "wasmcloud", "actor", "events"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

serde = { version = "1.0.123" , features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.123"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
log = { version="0.4.14", features =["std","serde"]}

[dev-dependencies]
structopt = "0.3.21"
serde_json = "1.0.62"
base64 = "0.13.0"
log = "0.4.14"
wasmcloud-actor-core = { version ="0.2.2", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.1", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
