[package]
name = "wasmcloud-actor-extras"
version = "0.1.2"
authors = ["wasmCloud Team"]
edition = "2018"
description = "Interface to the extras contract for use by wasmCloud Actors"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-extras"
readme = "README.md"
keywords = ["wasm", "wasmcloud", "actor", "uuid", "random"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

serde = { version = "1.0.123" , features = ["derive"] }
serde_derive = "1.0.123"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"

[dev-dependencies]
structopt = "0.3.21"
serde_json = "1.0.61"
base64 = "0.13.0"
log = "0.4.11"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.1", features = ["guest"] }

# Publishes rustdocs with guest feature flag
[package.metadata.docs.rs]
features = ["guest"]
rustdoc-args = ["--cfg", "feature=\"guest\""]