[package]
name = "wasmcloud-actor-http-client"
version = "0.1.1"
description = "HTTP Client Actor Interface for wasmCloud Actors"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-http-client"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
serde = { version = "1.0.123" , features = ["derive"] }
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
lazy_static = { version = "1.4.0", optional = true}

[dev-dependencies]
structopt = "0.3.21"
serde_json = "1.0.62"
base64 = "0.13.0"
wasmcloud-actor-core = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
wasmcloud-actor-http-server = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
