[package]
name = "wasmcloud-actor-http-client"
version = "0.2.1"
description = "HTTP Client Actor Interface for wasmCloud Actors"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-http-client"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
serde = { version = "1.0.123" , features = ["derive"] }
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"

[dev-dependencies]
structopt = "0.3.21"
serde_json = "1.0.62"
base64 = "0.13.0"
wasmcloud-actor-core = { version = "0.2.2" , features = ["guest"]}
wasmcloud-actor-http-server = { version = "0.1.1", features = ["guest"]}

# Publishes rustdocs with guest feature flag
[package.metadata.docs.rs]
features = ["guest"]
rustdoc-args = ["--cfg", "feature=\"guest\""]