[package]
name = "actor-http-server"
version = "0.1.0"
description = "HTTP Server Actor Interface for waSCC Actors"
authors = ["waSCC Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-http-server"
readme = "README.md"
keywords = ["webassembly", "wasm", "wascc", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true}
lazy_static = { version = "1.4.0", optional = true}
serde = { version = "1.0.119" , features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.119"
serde_bytes = "0.11.5"
rmp-serde = "0.15.1"
log = { version="0.4.13", features =["std","serde"]}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
