[package]
name = "wasmcloud-actor-messaging"
version = "0.1.2"
description = "Messaging wasmCloud Actor Interface"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-messaging"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true}
lazy_static = { version = "1.4.0", optional = true}
serde = { version = "1.0.123" , features = ["derive"] }
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"

[dev-dependencies]
structopt = "0.3.21"
serde_json = "1.0.62"
base64 = "0.13.0"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"]}

# Publishes rustdocs with guest feature flag
[package.metadata.docs.rs]
features = ["guest"]
rustdoc-args = ["--cfg", "feature=\"guest\""]
