[package]
name = "actor-core"
description = "wasmCloud Core Actor Interface"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-core"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.118" , features = ["derive"] }
serde_json = "1.0.60"
serde_bytes = "0.11.5"
rmp-serde = "0.15.0"
log = { version="0.4.11", features =["std","serde"]}
lazy_static = "1.4.0"
