[package]
name = "actor-eventstreams"
version = "0.1.0"
authors = ["wasmCloud Team"]
edition = "2018"
description = "Interface to the event streams contract for use by wasmCloud Actors"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-eventstreams"
readme = "README.md"
keywords = ["wasm", "wasmcloud", "actor", "events"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "lazy_static"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

serde = { version = "1.0.119" , features = ["derive"] }
serde_json = "1.0.61"
serde_bytes = "0.11.5"
rmp-serde = "0.15.1"
log = { version="0.4.13", features =["std","serde"]}

