[package]
name = "actor-graphdb"
version = "0.1.0"
description = "GraphDB Actor Interface for wasmCloud Actors"
authors = ["wasmCloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-graphdb"
readme = "README.md"
repository = "https://github.com/wasmCloud/actor-interfaces"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[features]
guest = ["wapc-guest"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
serde = { version = "1.0.115" , features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.14.4"
log = { version="0.4.11", features =["std","serde"]}
lazy_static = "1.4.0"
actor-core = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main"}
wascc-actor = "0.7.4"

[dev-dependencies]
structopt = "0.3.17"
serde_json = "1.0.57"
base64 = "0.12.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
