[package]
name = "actor-http-server"
version = "0.1.0"
description = "HTTP Server Actor Interface for waSCC Actors"
authors = ["waSCC Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/actor-http-server"
readme = "README.md"
keywords = ["webassembly", "wasm", "wascc", "actor"]
categories = ["wasm", "api-bindings"]

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.117" , features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde_bytes = "0.11.5"
rmp-serde = "0.14.4"
log = { version="0.4.11", features =["std","serde"]}
lazy_static = "1.4.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
