[package]
name = "actor-messaging"
version = "0.1.0"
authors = ["wasmCloud Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.118" , features = ["derive"] }
serde_json = "1.0.59"
serde_bytes = "0.11.5"
rmp-serde = "0.15.0"
log = { version="0.4.11", features =["std","serde"]}
lazy_static = "1.4.0"