[package]
name = "wasmcloud-actor-telnet"
version = "0.1.1"
edition = "2018"
description = "Actor interface for the wasmCloud telnet capability provider"
authors = ["wasmCloud Team"]
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-telnet"
readme = "README.md"
keywords = ["webassembly", "wasm", "telnet", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
rmp-serde = "0.15.4"
serde = { version = "1.0.123" , features = ["derive"] }
log = { version="0.4.14", features =["std","serde"]}
lazy_static = "1.4.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
