[package]
name = "wasmcloud-actor-telnet"
version = "0.2.0"
edition = "2018"
description = "Actor interface for the wasmCloud telnet capability provider"
authors = ["wasmCloud Team"]
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-telnet"
readme = "README.md"
keywords = ["webassembly", "wasm", "telnet", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest"]

[dependencies]
wapc-guest = { version = "0.4.0", optional = true }
rmp-serde = "0.15.4"
serde = { version = "1.0.125" , features = ["derive"] }
lazy_static = "1.4.0"

[dev-dependencies]
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true

# Publishes rustdocs with guest feature flag
[package.metadata.docs.rs]
features = ["guest"]
rustdoc-args = ["--cfg", "feature=\"guest\""]
default-target = "wasm32-unknown-unknown"
