[package]
name = "wasmcloud-actor-core"
description = "wasmCloud Core Actor Interface"
version = "0.2.3"
authors = ["wasmcloud Team"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-actor-core"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "actor"]
categories = ["wasm", "api-bindings"]

[features]
guest = ["wapc-guest", "wasmcloud-actor-core-derive"]

[dependencies]
wasmcloud-actor-core-derive = { version = "0.1.0", optional = true }
wapc-guest = { version = "0.4.0", optional = true }
serde = { version = "1.0.123" , features = ["derive"] }
serde_json = "1.0.62"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
log = { version="0.4.14", features =["std","serde"]}
lazy_static = "1.4.0"

# Publishes rustdocs with guest feature flag
[package.metadata.docs.rs]
features = ["guest", "wasmcloud-actor-core-derive"]
rustdoc-args = ["--cfg", "feature=\"guest\"", "--cfg", "feature=\"wasmcloud-actor-core-derive\""]